k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: github-copilot-ns
  labels:
    name: github-copilot-ns
    app.kubernetes.io/name: material-dashboard
    app.kubernetes.io/component: namespace
